--- a/front/pages/gm/cdk.html
+++ b/front/pages/gm/cdk.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <title>CDK管理</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="stylesheet" href="../../css/oksub.css">
-  <script type="text/javascript" src="../../lib/loading/okLoading.js"></script>
+  <link rel="stylesheet" href="/css/oksub.css">
+  <script type="text/javascript" src="/lib/loading/okLoading.js"></script>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
     <table id="tableId" lay-filter="tableFilter"></table>
   </div>
   <!--js逻辑-->
-  <script src="../../lib/layui/layui.js"></script>
+  <script src="/lib/layui/layui.js"></script>
   <script>
     var editCDK;
     layui.use(["element", "table", "okLayer", "okUtils"], function () {
