修复gm命令中带\t的bug

--- a/front/pages/game/role.html
+++ b/front/pages/game/role.html
@@ -16,7 +16,7 @@
           <div id="zoneSelect"></div>
         </div>
         <div class="layui-input-inline">
-          <input class="layui-input" placeholder="请输入角色名" autocomplete="off" name="name">
+          <input class="layui-input" placeholder="请输入角色名或玩家id" autocomplete="off" name="name">
         </div>
         <div class="layui-input-inline">
           <button class="layui-btn" lay-submit lay-filter="search">
