--- a/front/pages/gm/welfare-add.html
+++ b/front/pages/gm/welfare-add.html
@@ -28,7 +28,7 @@
 	    <div class="layui-form-item layui-form-text">
 		    <label class="layui-form-label">GM命令</label>
 		    <div class="layui-input-block">
-		    	<textarea name="sCmds" placeholder="gm命令 多条命令换行" class="layui-textarea" lay-verify="required" lay-verType="tips"></textarea>
+		    	<textarea name="sCmds" placeholder="gm命令 多条命令换行{roleid}占位符表示玩家id" class="layui-textarea" lay-verify="required" lay-verType="tips"></textarea>
 		    </div>
 		  </div>
 
