--- a/front/pages/gm/activity-edit.html
+++ b/front/pages/gm/activity-edit.html
@@ -48,7 +48,7 @@
 
       <div class="layui-form-item">
         <div class="layui-input-block">
-          <button class="layui-btn" lay-submit lay-filter="add">保存</button>
+          <button class="layui-btn" lay-submit lay-filter="add" id="add">保存</button>
         </div>
       </div>
     </form>
@@ -60,6 +60,7 @@
     var json_data;
     var config_data;
     var online_data;
+    var locked;
     var $;
     layui.use(['form', 'okLayer', 'okUtils'], function () {
       let form = layui.form;
@@ -69,9 +70,15 @@
       let xmSelect = layui.xmSelect;
       okLoading.close();
 
+      locked = parent.editActivity.locked;
+
       $("input[name='apply_user']").val(parent.editActivity.apply_user);
       $("textarea[name='configure_desc']").val(parent.editActivity.configure_desc);
       $("textarea[name='configure_data']").val(parent.editActivity.configure_data);
+
+      if (locked) {
+        $("#add").addClass("layui-hide");
+      }
 
       let apply_zone = parent.editActivity.apply_zone;
       if (apply_zone == '') {
@@ -150,6 +157,12 @@
 
       //监听提交
       form.on('submit(add)', function (data) {
+        if (parent.editActivity.locked) {
+          okLayer.greenTickMsg("活动数据已锁定不能编辑", function () {
+            parent.layer.close(parent.layer.getFrameIndex(window.name));
+          });
+          return false;
+        }
         if (data.field.apply_zone == '99999') {
           data.field.apply_zone = '';
         }
@@ -167,7 +180,11 @@
       $('#editconfig').click(function(e) {
         json_data = "textarea[name='configure_data']";
         config_data = activity.config.mainFieldOption;
-        okLayer.open("编辑配置", "/gm/json.html", "90%", "90%", null, null);
+        let readonly = '';
+        if (locked) {
+          readonly = '[只读]';
+        }
+        okLayer.open("编辑配置"+readonly, "/gm/json.html", "90%", "90%", null, null);
       });
     });
   </script>
