--- a/front/pages/gm/activity.html
+++ b/front/pages/gm/activity.html
@@ -101,7 +101,7 @@
             }
           },
           { field: "configure_data", title: "配置数据", align: "center"},
-          { title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70, fixed: 'right' }
+          { title: "操作", align: "center", templet: "#operationTpl", width: 100, fixed: 'right' }
         ]],
         parseData: function (res) {
           for (i = 0; res.data && i < res.data.length; ++i) {
@@ -125,6 +125,9 @@
           case "import":
             iimport();
             break;
+          case "batchLock":
+            batchLock();
+            break;
         }
       });
 
@@ -138,8 +141,33 @@
           case "del":
             del(data.id);
             break;
+          case "unlock":
+            lock(data.id, false);
+            break;
+          case "lock":
+            lock(data.id, true);
+            break;
         }
       });
+
+      table.on('rowDouble(tableFilter)', function(obj){
+        editActivity = obj.data;
+        edit(obj.data.id);
+      });
+
+      function lock(id, locked) {
+        let msg = "加锁";
+        if (locked == false) {
+          msg = "解锁";
+        }
+        okLayer.confirm("确定要"+msg+"吗？", function () {
+          okUtils.ajax("/api/gm/activity/lock", "post", { idsStr: id, locked: locked?1:0 }, true).done(function (response) {
+            okUtils.tableSuccessMsg(response.data);
+          }).fail(function (error) {
+            console.log(error)
+          });
+        })
+      }
 
       function add() {
         okLayer.open("添加活动", "/gm/activity-add.html", "90%", "90%", null, function () {
@@ -148,7 +176,11 @@
       }
 
       function edit(id) {
-        okLayer.open("编辑活动", "/gm/activity-edit.html", "90%", "90%", null, function () {
+        let readonly = "";
+        if (editActivity.locked) {
+          readonly = "[只读]";
+        }
+        okLayer.open("编辑活动"+readonly, "/gm/activity-edit.html", "90%", "90%", null, function () {
           activityTable.reload();
         })
       }
@@ -177,7 +209,21 @@
         });
       }
 
-      function download (content, filename) {
+      function batchLock() {
+        okLayer.confirm("确定要批量加锁吗？", function (index) {
+          layer.close(index);
+          let idsStr = okUtils.tableBatchCheck(table);
+          if (idsStr) {
+            okUtils.ajax("/api/gm/activity/lock", "post", { idsStr: idsStr, locked: 1 }, true).done(function (response) {
+              okUtils.tableSuccessMsg(response.data);
+            }).fail(function (error) {
+              console.log(error)
+            });
+          }
+        });
+      }
+
+      function download(content, filename) {
         let eleLink = document.createElement('a');
         eleLink.download = filename;
         eleLink.style.display = 'none';
@@ -221,18 +267,24 @@
     });
   </script>
   <!-- 头工具栏模板 -->
-  <script type="text/html" id="toolbarTpl">
+<script type="text/html" id="toolbarTpl">
   <div class="layui-btn-container">
     <div class="layui-inline" lay-event="add"><a href="javascript:" title="新增"><i class="layui-icon layui-icon-add-1"></i></a></div>
     <div class="layui-inline" lay-event="batchDel"><a href="javascript:" title="批量删除"><i class="layui-icon layui-icon-delete"></i></a></div>
     <div class="layui-inline" lay-event="export"><a href="javascript:" title="导出"><i class="layui-icon layui-icon-download-circle"></i></a></div>
     <div class="layui-inline" lay-event="import"><a href="javascript:" title="导入"><i class="layui-icon layui-icon-upload-drag"></i></a></div>
+    <div class="layui-inline" lay-event="batchLock"><a href="javascript:" title="一键加锁"><i class="layui-icon">&#xe673;</i></a></div>
   </div>
 </script>
 
-  <script type="text/html" id="operationTpl">
-  <a href="javascript:" title="编辑" lay-event="edit"><i class="layui-icon">&#xe642;</i></a>
-  <a href="javascript:" title="删除" lay-event="del"><i class="layui-icon">&#xe640;</i></a>
+<script type="text/html" id="operationTpl">
+  {{#  if(d.locked){ }}
+    <a href="javascript:" title="解锁" lay-event="unlock"><i class="layui-icon">&#xe673;</i></a>
+  {{#  } else { }}
+    <a href="javascript:" title="锁定" lay-event="lock"><i class="layui-icon">&#xe673;</i></a>
+    <a href="javascript:" title="编辑" lay-event="edit"><i class="layui-icon">&#xe642;</i></a>
+    <a href="javascript:" title="删除" lay-event="del"><i class="layui-icon">&#xe640;</i></a>
+  {{#  } }}
 </script>
 </body>
 
