--- a/front/pages/gm/welfare-add.html
+++ b/front/pages/gm/welfare-add.html
@@ -19,16 +19,16 @@
       </div>
 
 	    <div class="layui-form-item layui-form-text">
-		    <label class="layui-form-label">玩家列表</label>
+		    <label class="layui-form-label">玩家列表 分区id,玩家id 多个玩家换行</label>
 		    <div class="layui-input-block">
-		    	<textarea name="sRoles" placeholder="分区id,玩家id 多个玩家换行" autocomplete="off" class="layui-textarea" lay-verify="required" lay-verType="tips"></textarea>
+		    	<textarea name="sRoles" autocomplete="off" class="layui-textarea" lay-verify="required" lay-verType="tips"></textarea>
 		    </div>
 		  </div>
 
 	    <div class="layui-form-item layui-form-text">
-		    <label class="layui-form-label">GM命令</label>
+		    <label class="layui-form-label">GM命令 多条命令换行{roleid}占位符表示玩家id</label>
 		    <div class="layui-input-block">
-		    	<textarea name="sCmds" placeholder="gm命令 多条命令换行{roleid}占位符表示玩家id" class="layui-textarea" lay-verify="required" lay-verType="tips"></textarea>
+		    	<textarea name="sCmds" class="layui-textarea" lay-verify="required" lay-verType="tips"></textarea>
 		    </div>
 		  </div>
 
