公告弹窗显示

--- a/front/pages/gm/bulletin-add.html
+++ b/front/pages/gm/bulletin-add.html
@@ -52,6 +52,16 @@
       </div>
 
       <div class="layui-form-item">
+        <label class="layui-form-label">是否弹窗显示</label>
+        <div class="layui-input-block">
+          <select name="iPopWindow">
+            <option value="0">否</option>
+            <option value="1" selected>是</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="layui-form-item">
         <label class="layui-form-label">类型</label>
         <div class="layui-input-block">
           <select name="iType">
