--- a/front/pages/gm/bulletin-edit.html
+++ b/front/pages/gm/bulletin-edit.html
@@ -51,6 +51,16 @@
       </div>
 
       <div class="layui-form-item">
+        <label class="layui-form-label">是否弹窗显示</label>
+        <div class="layui-input-block">
+          <select name="iPopWindow">
+            <option value="0">否</option>
+            <option value="1">是</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="layui-form-item">
         <label class="layui-form-label">类型</label>
         <div class="layui-input-block">
           <select name="iType">
@@ -83,6 +93,7 @@
       $("input[name='sTitle']").val(parent.editdata.sTitle);
       $("textarea[name='sContent']").val(parent.editdata.sContent);
       $("select[name='iDisplay']").val(parent.editdata.iDisplay);
+      $("select[name='iPopWindow']").val(parent.editdata.iPopWindow);
       $("select[name='iType']").val(parent.editdata.iType);
       form.render();
 
