福利增加按间隔发放功能

--- a/front/pages/gm/welfare-add.html
+++ b/front/pages/gm/welfare-add.html
@@ -60,6 +60,23 @@
         </div>
        </div>
 
+      <div class="layui-form-item">
+        <div class="layui-inline">
+          <label class="layui-form-label">间隔天数</label>
+          <div class="layui-input-inline">
+            <select name="iStep" lay-verify="required" lay-verType="tips">
+              <option value="1">1天</option>
+              <option value="2">2天</option>
+              <option value="3">3天</option>
+              <option value="4">4天</option>
+              <option value="5">5天</option>
+              <option value="6">6天</option>
+              <option value="7">7天</option>
+            </select>
+          </div>
+        </div>
+       </div>
+
 		  <div class="layui-form-item">
 			  <div class="layui-input-block">
 				  <button class="layui-btn" lay-submit lay-filter="add">添加</button>
