--- a/front/pages/gm/welfare-edit.html
+++ b/front/pages/gm/welfare-edit.html
@@ -60,6 +60,23 @@
         </div>
        </div>
 
+      <div class="layui-form-item">
+        <div class="layui-inline">
+          <label class="layui-form-label">间隔天数</label>
+          <div class="layui-input-inline">
+            <select name="iStep" lay-verify="required" lay-verType="tips">
+              <option value="1">1天</option>
+              <option value="2">2天</option>
+              <option value="3">3天</option>
+              <option value="4">4天</option>
+              <option value="5">5天</option>
+              <option value="6">6天</option>
+              <option value="7">7天</option>
+            </select>
+          </div>
+        </div>
+       </div>
+
 		  <div class="layui-form-item">
 			  <div class="layui-input-block">
 				  <button class="layui-btn" lay-submit lay-filter="add">更新</button>
@@ -79,10 +96,13 @@
       $("input[name=sName]").val(parent.welfaredata.sName);
       $("textarea[name=sRoles]").val(parent.welfaredata.sRoles);
       $("textarea[name=sCmds]").val(parent.welfaredata.sCmds);
+      $("select[name=iStep]").val(parent.welfaredata.iStep);
       laydate.render({elem: "#sBeginTime", type: "date", value: parent.welfaredata.sBeginTime});
       laydate.render({elem: "#sEndTime", type: "date", value: parent.welfaredata.sEndTime});
       laydate.render({elem: "#sCmdBeginTime", type: "time", value: parent.welfaredata.sCmdBeginTime});
       laydate.render({elem: "#sCmdEndTime", type: "time", value: parent.welfaredata.sCmdEndTime});
+
+      form.render();
 
       //监听提交
       form.on('submit(add)', function(data){
