--- a/front/pages/gm/gm.html
+++ b/front/pages/gm/gm.html
@@ -11,6 +11,7 @@
 
 <body>
   <div class="ok-body">
+    <p style="margin:20px; color: #FF0000;">Tips: 修改时间时 请两边同时修改 例: 1服,1001服 add_server_day 1</p>
     <div class="layui-row">
       <div class="layui-col-md6">
         <form class="layui-form">
