--- a/front/pages/gm/activity-edit.html
+++ b/front/pages/gm/activity-edit.html
@@ -184,7 +184,19 @@
         if (locked) {
           readonly = '[只读]';
         }
-        okLayer.open("编辑配置"+readonly, "/gm/json.html", "90%", "90%", null, null);
+        okLayer.open("编辑配置"+readonly, "/gm/json.html", "90%", "90%", null, null, function (index, layero) { 
+	  let newValue = okUtils.jsonToString(json_editor.getValue());
+	  let oldValue = $(json_data).val();
+	  if (newValue == oldValue) {
+            layer.close(index);
+          } else {
+  	    if (confirm('有修改未保存，确定要关闭么')) {
+              layer.close(index);
+  	    } else {
+	      return false;
+	    }
+	  }
+      	});
       });
     });
   </script>
