--- a/front/pages/gm/json.html
+++ b/front/pages/gm/json.html
@@ -305,7 +305,18 @@
               return;
             }
             json_data = "#"+fieldKey.replace(".","-");
-            okLayer.open(title, "/gm/json.html", "90%", "90%", null, null);
+            okLayer.open(title, "/gm/json.html", "90%", "90%", null, null, function (index, layero) { 
+	      let newValue = okUtils.jsonToString(json_editor.getValue());
+	      let oldValue = $(json_data).val();
+	      if (newValue == oldValue) {
+                layer.close(index);
+              } else {
+  	        if (confirm('有修改未保存，确定要关闭么')) {
+                  layer.close(index);
+  	        }
+	      }
+	      return false;
+      	    });
           });
         }
 
@@ -563,6 +574,7 @@
       }
 
       let editor = new jsonEditor(parent.layui.$(parent.json_data).val(), parent.config_data);
+      parent.json_editor = editor;
 
       form.on('checkbox', function(data) {
         let checked = data.elem.checked;
@@ -613,11 +625,8 @@
 
       form.on('submit(save)', function(data){
         let fields = editor.getValue();
-        if (!fields) {
-          return false;
-        }
-        if (!okUtils.isEmpty(fields)) {
-          parent.layui.$(parent.json_data).val(okUtils.jsonToString(fields));
+        if (fields != undefined) {
+       	  parent.layui.$(parent.json_data).val(okUtils.jsonToString(fields));
         }
         parent.layer.close(parent.layer.getFrameIndex(window.name));
         return false;
