--- a/front/pages/game/real-map.html
+++ b/front/pages/game/real-map.html
@@ -25,7 +25,7 @@
 </div>
 <!--js逻辑-->
 <script src="/lib/layui/layui.js"></script>
-<script src="/lib/echarts/echarts.js"></script>
+<script src="/lib/echarts/echarts.min.js"></script>
 <script type="text/javascript" src="/lib/xm-select/xm-select.js"></script>
 <script>
   layui.use(["okUtils", "okLayer", "form"], function () {
