--- a/front/pages/gm/welfare.html
+++ b/front/pages/gm/welfare.html
@@ -67,6 +67,9 @@
           case "add":
             add();
             break;
+          case "add2":
+            add2();
+            break;
         }
       });
 
@@ -81,7 +84,11 @@
             break;
           case "edit":
             welfaredata = data;
-            edit(data.id);
+            if (data.slg) {
+              edit2(data.id);
+            } else {
+              edit(data.id);
+            }
             break;
           case "del":
             del(data.id);
@@ -95,8 +102,20 @@
         })
       }
 
+      function add2() {
+        okLayer.open("新增SLG福利", "welfare-add2.html", "90%", "90%", null, function () {
+          welfareTable.reload();
+        })
+      }
+
       function edit(id) {
         okLayer.open("编辑福利", "welfare-edit.html", "90%", "90%", null, function () {
+          welfareTable.reload();
+        })
+      }
+
+      function edit2(id) {
+        okLayer.open("编辑SLG福利", "welfare-edit2.html", "90%", "90%", null, function () {
           welfareTable.reload();
         })
       }
@@ -136,6 +155,7 @@
   <script type="text/html" id="toolbarTpl">
   <div class="layui-btn-container">
     <div class="layui-inline" lay-event="add"><i class="layui-icon layui-icon-add-1"></i></div>
+    <div class="layui-inline" lay-event="add2"><i class="layui-icon layui-icon-add-2"></i></div>
   </div>
 </script>
 
