--- a/front/pages/game/real-fightverify.html
+++ b/front/pages/game/real-fightverify.html
@@ -82,7 +82,7 @@
             }
           },
           axisLabel: {
-            formatter: '{value} us'
+            formatter: '{value} ms'
           },
           position:'right',
           offset:70,
@@ -96,7 +96,7 @@
             }
           },
           axisLabel: {
-            formatter: '{value} us'
+            formatter: '{value} ms'
           },
           position:'right',
           offset:140,
