--- a/front/pages/game/real-stageverify.html
+++ b/front/pages/game/real-stageverify.html
@@ -96,7 +96,7 @@
             }
           },
           axisLabel: {
-            formatter: '{value} us'
+            formatter: '{value} ms'
           },
           position:'right',
           offset:140,
