--- a/front/pages/gm/channel-add.html
+++ b/front/pages/gm/channel-add.html
@@ -33,6 +33,13 @@
 		    </div>
 		  </div>
 
+	    <div class="layui-form-item">
+		    <label class="layui-form-label">商店版本号</label>
+		    <div class="layui-input-block">
+		    	<input type="text" name="sShopVer" placeholder="请输入商店版本号" autocomplete="off" class="layui-input" lay-verify="required" lay-verType="tips">
+		    </div>
+		  </div>
+
       <div class="layui-form-item">
         <div class="layui-input-block">
           <button class="layui-btn" lay-submit lay-filter="add">添加</button>
