--- a/front/pages/gm/channel-edit.html
+++ b/front/pages/gm/channel-edit.html
@@ -33,6 +33,13 @@
 		    </div>
 		</div>
 
+	    <div class="layui-form-item">
+		    <label class="layui-form-label">商店版本号</label>
+		    <div class="layui-input-block">
+		    	<input type="text" name="sShopVer" placeholder="请输入商店版本号" autocomplete="off" class="layui-input" lay-verify="required" lay-verType="tips">
+		    </div>
+		  </div>
+
       <div class="layui-form-item">
         <div class="layui-input-block">
           <button class="layui-btn" lay-submit lay-filter="add">更新</button>
@@ -51,6 +58,7 @@
       $("input[name='sChannel']").val(parent.editdata.sChannel);
       $("input[name='sAddress']").val(parent.editdata.sAddress);
       $("input[name='sRes']").val(parent.editdata.sRes);
+      $("input[name='sShopVer']").val(parent.editdata.sShopVer);
 
       //监听提交
       form.on('submit(add)', function (data) {
