--- a/front/pages/gm/channel.html
+++ b/front/pages/gm/channel.html
@@ -37,6 +37,7 @@
           { field: "sChannel", title: "渠道", width: 90, fixed: 'left' },
           { field: "sAddress", title: "exe更新地址" },
           { field: "sRes", title: "res更新地址" },
+          { field: "sShopVer", title: "商店版本号" },
           { title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70, fixed: 'right' }
         ]],
         parseData: function (res) {
