--- a/front/pages/gm/activity.html
+++ b/front/pages/gm/activity.html
@@ -82,7 +82,7 @@
           { type: "checkbox", title: "序号", fixed: 'left' },
           { field: "id", title: "活动ID", width: 90, fixed: 'left' },
           { field: "apply_zone", title: "应用分区", width: 90, fixed: 'left' },
-          { field: "apply_user", title: "应用玩家", width: 90 },
+          { field: "apply_map", title: "应用地图", width: 90 },
           { field: "activity_type", title: "活动类型", width: 90, align: "center", templet: function (d) {
             let act = activity.config.activityTypeDefine[d.activity_type];
             return act ? act.name : '未知类型';
