--- a/front/pages/gm/cdk-edit.html
+++ b/front/pages/gm/cdk-edit.html
@@ -133,6 +133,13 @@
         },
       });
 
+      form.verify({
+        cdkname: [
+          /^[A-Za-z\d]{1,20}$/
+          ,'cdk必须1到20位的字母或者数字'
+        ]
+      });
+
       okUtils.ajax("/api/gm/zone/simplelist", "get", {game: true, all: true}, false).done(function (response) {
         let ids = [99999];
         if (parent.editCDK.sZoneLimit != '') {
