--- a/front/pages/gm/cdk-edit.html
+++ b/front/pages/gm/cdk-edit.html
@@ -14,7 +14,7 @@
       <div class="layui-form-item">
         <label class="layui-form-label">名称</label>
         <div class="layui-input-block">
-          <input type="text" required name="sCDKeyName" class="layui-input">
+          <input type="text" required name="sCDKeyName" class="layui-input" lay-verify="cdkname">
         </div>
       </div>
 
