--- a/front/pages/gm/cdk-edit.html
+++ b/front/pages/gm/cdk-edit.html
@@ -28,14 +28,14 @@
       <div class="layui-form-item">
         <label class="layui-form-label">开始时间</label>
         <div class="layui-input-block">
-          <input type="text" required name="iBeginTime" id="iBeginTime" autocomplete="off" class="layui-input" lay-verify="required|datetime" lay-verType="tips">
+          <input type="text" required name="sBeginTime" id="iBeginTime" autocomplete="off" class="layui-input" lay-verify="required|datetime" lay-verType="tips">
         </div>
       </div>
 
       <div class="layui-form-item">
         <label class="layui-form-label">结束时间</label>
         <div class="layui-input-block">
-          <input type="text" required name="iEndTime" id="iEndTime" autocomplete="off" class="layui-input" lay-verify="required|datetime" lay-verType="tips">
+          <input type="text" required name="sEndTime" id="iEndTime" autocomplete="off" class="layui-input" lay-verify="required|datetime" lay-verType="tips">
         </div>
       </div>
 
@@ -146,8 +146,8 @@
         console.log(error);
       });
 
-      laydate.render({ elem: "#iBeginTime", type: "datetime", value: new Date(parent.editCDK.iBeginTime * 1000) });
-      laydate.render({ elem: "#iEndTime", type: "datetime", value: new Date(parent.editCDK.iEndTime * 1000) });
+      laydate.render({ elem: "#iBeginTime", type: "datetime", value: parent.editCDK.sBeginTime });
+      laydate.render({ elem: "#iEndTime", type: "datetime", value: parent.editCDK.sEndTime });
 
       $("input[name='sCDKeyName']").val(parent.editCDK.sCDKeyName);
       $("input[name='iCDKeyNum']").val(parent.editCDK.iCDKeyNum);
@@ -158,8 +158,6 @@
 
       //监听提交
       form.on('submit(add)', function (data) {
-        data.field.iBeginTime = Date.parse(data.field.iBeginTime) / 1000;
-        data.field.iEndTime = Date.parse(data.field.iEndTime) / 1000;
         data.field.ICDKeyId = parent.editCDK.id;
         if (data.field.sZoneLimit == '99999') {
           data.field.sZoneLimit = '';
