--- a/front/pages/gm/dir-add.html
+++ b/front/pages/gm/dir-add.html
@@ -37,7 +37,7 @@
         <div class="layui-inline">
 			    <label class="layui-form-label">开服时间</label>
 			    <div class="layui-input-inline">
-				    <input type="text" name="iPublishTime" id="iPublishTime" placeholder="请输入开服时间" autocomplete="off" class="layui-input" lay-verify="required|datetime" lay-verType="tips">
+				    <input type="text" name="sPublishTime" id="iPublishTime" placeholder="请输入开服时间" autocomplete="off" class="layui-input" lay-verify="required|datetime" lay-verType="tips">
 			    </div>
         </div>
       </div>
@@ -187,7 +187,6 @@
 
       //监听提交
       form.on('submit(add)', function(data){
-        data.field.iPublishTime = Date.parse(data.field.iPublishTime)/1000;
         okUtils.ajax("/api/gm/zone/add", "post", data.field, true).done(function (response) {
           okLayer.greenTickMsg(response.data, function () {
 			  		parent.layer.close(parent.layer.getFrameIndex(window.name));
