--- a/front/pages/gm/bulletin-edit.html
+++ b/front/pages/gm/bulletin-edit.html
@@ -53,10 +53,17 @@
       <div class="layui-form-item">
         <label class="layui-form-label">是否弹窗显示</label>
         <div class="layui-input-block">
-          <select name="iPopWindow">
+          <select name="iPopWindow" lay-filter="type">
             <option value="0">否</option>
             <option value="1">是</option>
           </select>
+        </div>
+      </div>
+
+      <div class="layui-form-item layui-hide" id="PopWindowEndTime">
+        <label class="layui-form-label">弹窗显示时间</label>
+        <div class="layui-input-block">
+          <input type="text" name="sPopWindowEndTime" id="iEndTime" autocomplete="off" class="layui-input" lay-verify="required|datetime" lay-verType="tips">
         </div>
       </div>
 
@@ -96,6 +103,17 @@
       $("select[name='iPopWindow']").val(parent.editdata.iPopWindow);
       $("select[name='iType']").val(parent.editdata.iType);
       form.render();
+      
+      form.on('select(type)', function(data){
+        if (data.value == 1) {
+          $('#popwindowEndTime').removeClass('layui-hide');
+          $('input[name=sPopWindowEndTime]').val('');
+          $('input[name=sPopWindowEndTime]').attr("lay-verify", "required|datatime");
+        } else {
+          $('#popwindowEndTime').addClass('layui-hide');
+          $('input[name=sPopWindowEndTime]').attr("lay-verify", "");
+        }
+      });
 
       //监听提交
       form.on('submit(add)', function (data) {
